Fixed skills alignment. Fixed menu on iPad

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -45,7 +45,7 @@ $font-family-base:      'Open Sans', sans-serif;
 
 $screen-x2-min:         480px;
 $screen-x1-min:         650px;
-$screen-sm-min:         768px;
+$screen-sm-min:         767px;
 $screen-m2-min:         810px;
 $screen-m1-min:         992px;
 $screen-lg-min:         1200px;
