--- a/src/skills/components/skills.scss
+++ b/src/skills/components/skills.scss
@@ -30,6 +30,7 @@
     text-align: center;
     float: none;
     padding: 0px;
+    width: 200px;
     p {
       color: #84868d;
       font-size: 13px;
